<resources>
    <string name="app_name">Part 2</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="case_description">Case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description case description case description case description case
        description case description </string>
    <string name="case_title">Case Title</string>
    <string name="clock">clock</string>
    <string name="category">category</string>
    <string name="categoryText">Category</string>
    <string name="time">23h. 22m.</string>
    <string name="keyword">Keyword...</string>
    <string name="any_category">Any Category</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="get_advice">Get Advice</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="advice">Advice</string>

    <array name="categories">
        <item>- No Category -</item>
        <item>Art</item>
        <item>Writing</item>
        <item>Literature</item>
        <item>Beauty</item>
        <item>Automotive</item>
        <item>Technology</item>
        <item>Drugs</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Environment</item>
        <item>Food</item>
        <item>Games</item>
        <item>General</item>
        <item>Health</item>
        <item>Home</item>


    </array>
</resources>