<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#071C3E"
            android:divider="@drawable/ic_divider"
            android:orientation="vertical"
            android:padding="2dp"
            android:showDividers="middle">

            <TextView
                android:id="@+id/itemCaseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#071C3E"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/case_title"
                android:textColor="#9FAFCA"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemCaseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#0E387A"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/case_description"
                    android:textColor="#9FAFCA"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#32568E"
                android:divider="@drawable/ic_divider"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="3dp"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/categoryIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/category"
                        app:srcCompat="@drawable/ic_category" />

                    <TextView
                        android:id="@+id/itemCaseCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/categoryText"
                        android:textColor="#9FAFCA"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/clockIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/clock"
                        app:srcCompat="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/itemCaseTimeLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/time"
                        android:textColor="#9FAFCA"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>