<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#071C3E"
            android:gravity="center"
            android:padding="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/saveNewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold"
                android:textColor="#9FAFCA"
                android:textSize="30sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/userProfilePictureCreate"
                    android:layout_width="168dp"
                    android:layout_height="168dp"
                    app:srcCompat="@drawable/ic_avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />

                    <EditText
                        android:id="@+id/usernameCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio" />

                    <EditText
                        android:id="@+id/userBioCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>