<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#071C3E"
            android:gravity="center"
            android:padding="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:rotation="90"
                app:srcCompat="@drawable/ic_dropdown_menu_sigh" />

            <TextView
                android:id="@+id/viewCaseBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:text="@string/back"
                android:textColor="#9FAFCA"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/viewCaseAdvice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:layout_weight="1"
                android:text="@string/advice"
                android:textStyle="bold"
                android:textColor="#9FAFCA"
                android:textSize="30sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:id="@+id/viewCaseCaseTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:text="Case title"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#0E387A"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_category_dark"/>

                        <TextView
                            android:id="@+id/viewCaseCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textColor="#0E387A"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_clock_dark"/>

                        <TextView
                            android:id="@+id/viewCaseRemainingTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30/01/2022"
                            android:textColor="#0E387A"/>

                    </LinearLayout>

                 </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="Description"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#0E387A"/>

                    <TextView
                        android:id="@+id/viewCaseDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="Case description"
                        android:textSize="20sp"
                        android:textColor="#0E387A"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="User Information"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#0E387A"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="4dp">

                        <ImageView
                            android:id="@+id/viewCaseProfilePicture"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_avatar_dark"/>

                        <TextView
                            android:id="@+id/viewCaseUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="#0E387A"
                            android:layout_marginLeft="4dp"
                            android:textSize="20dp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/viewCaseUserBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="User bio"
                        android:textSize="20sp"
                        android:textColor="#0E387A"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>